fixed date field height on ios, and date validation
*empty dates on safari ios have zero content height, so i set a min height.
*when yup uses date object as min date, it exclude today unless you reset hours to midnight on date object

--- a/src/features/bookingpage/bookingpage.css
+++ b/src/features/bookingpage/bookingpage.css
@@ -105,6 +105,7 @@
   border-radius: 1rem;
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
+  min-height: 2.5rem;
   transition: box-shadow 0.3s ease, outline 0.3s ease, transform 0.3s ease;
 }
 
